force-app/main/default/objects/Lead_Flex_Field__c/Lead_Flex_Field__c.object-meta.xml
<CustomObject>
    <description>Custom Object to story Lead Flex Fields data.</description>
    <label>Additional Lead Field</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Lead Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>