force-app/main/default/objects/Lead_Flex_Field__c/fields/Campaign_Flex_Field__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Flex_Field__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Universally Unique Identification Number, required for backup and restorations of Documents. </description>
    <label>Campaign Flex Field</label>
    <referenceTo>Campaign_Flex_Field__c</referenceTo>
    <relationshipLabel>Lead Flex Fields</relationshipLabel>
    <relationshipName>Lead_Flex_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>