force-app/main/default/objects/Lead_Flex_Field__c/fields/FlexFieldName__c.field-meta.xml
<CustomField>
    <fullName>FlexFieldName__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Flex Field Name</description>
    <formula>Campaign_Flex_Field__r.FlexFieldName__c</formula>
    <label>Field Name</label>
    <type>Text</type>
</CustomField>