force-app/main/default/objects/Lead_Flex_Field__c/fields/FlexFieldValue__c.field-meta.xml
<CustomField>
    <fullName>FlexFieldValue__c</fullName>
    <complianceGroup>Integrity - Uncontrolled;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Flex Field Value</description>
    <label>Field Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>