force-app/main/default/objects/Lead_Flex_Field__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Lead Record.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Additional Lead Info</relationshipLabel>
    <relationshipName>Lead_Flex_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>