force-app/main/default/objects/Lead_Flex_Field__c/fields/LeadIdSequence__c.field-meta.xml
<CustomField>
    <fullName>LeadIdSequence__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead ID + Sequence to identify associated Lead Flex field record of Lead records.</description>
    <externalId>true</externalId>
    <label>LeadIdSequence</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>