force-app/main/default/objects/Lead_Flex_Field__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>